# shady

./: .gitignore  .gitmodules  CMakeLists.txt  GRAMMAR.MD  README.MD  doxyfile  grammar.md  license.md  memory.md  project.sh  readme.md  vcpkg.json
samples/: CMakeLists.txt  aobench.slim  basic_blocks1.slim  control_flow.slim  control_flow1.slim  control_flow2.slim  empty.shady  fib.slim  functions1.slim  functions2.slim  hello_world.slim  identity.slim  memory1.slim  memory2.slim  rec_pow2.slim  restructure1.slim  restructure2.slim  test.slim
samples/aobench/: CMakeLists.txt  ao.c  ao.cl  ao.comp.cpp  ao.cu  ao.h  ao.slim  ao_host.c  ao_main.c
samples/checkerboard/: CMakeLists.txt  checkerboard.c  checkerboard_kernel.slim
samples/vcc/: hello_world.c
src/: CMakeLists.txt  annotation.c  arena.c  arena.h  block_builder.c  block_builder.h  compile.c  fold.c  fold.h  implem.h  local_array.h  log.c  log.h  main.c  node.c  portability.h  print.c  rewrite.c  rewrite.h  type.c  type.h  util.c  visit.c  visit.h
src/analysis/: free_variables.c  free_variables.h  scope.c  scope.h
src/api/: CMakeLists.txt  generator_enum.c  generator_enum.py  generator_grammar.c  generator_grammar.py  generator_type.c  generator_type.py
src/backend/: CMakeLists.txt
src/builtin/: CMakeLists.txt  builtin_code.c.in  embed_builtin_code.cmake  scheduler.shady
src/clang-ast/: CMakeLists.txt  cdecl.c  clang_ast.c  clang_ast.h  clang_ast_entry.c  main.c
src/common/: CMakeLists.txt  arena.c  arena.h  dict.c  dict.h  embed.c  embed.py  growy.c  growy.h  list.c  list.h  log.c  log.h  portability.c  portability.h  printer.c  printer.h  test_dict.c  test_util.c  util.c  util.h
src/containers/: CMakeLists.txt  dict.c  dict.h  list.c  list.h
src/driver/: CMakeLists.txt  cli.c  cli.h  driver.c  slim.c  targets.c  vcc.c  vcc_lib.c
src/emit/: builtins.h  emit.c  emit_builtins.c  emit_builtins.h  emit_type.c  emit_type.h  spirv_builder.c  spirv_builder.h
src/frontend/: CMakeLists.txt
src/frontends/: CMakeLists.txt
src/generator/: CMakeLists.txt  generator.py  generator_common.c  generator_common.py  generator_main.c  generator_main.py  import_spv_defs.py  json_apply.py
src/passes/: bind.c  import.c  infer.c  instr2bb.c  lower_callc.c  lower_callf.c  lower_cf_instrs.c  lower_jumps_loop.c  lower_mask.c  lower_physical_ptrs.c  lower_stack.c  lower_tailcalls.c  memory_layout.c  memory_layout.h  normalize.c  passes.h  split_callf.c
src/runner/: CMakeLists.txt  runner.c  runner_app_common.h  runner_backends.c  runner_cli.c  runner_init.c  runner_private.h  runner_program.c  runner_test.c  runtime_app_common.h  runtime_cli.c
src/runtime/: CMakeLists.txt  runtime.c  runtime_app_common.h  runtime_buffer.c  runtime_cli.c  runtime_device.c  runtime_dispatch.c  runtime_private.h  runtime_program.c  runtime_test.c
src/s2s/: CMakeLists.txt  s2s.c
src/shader-pipeline/: CMakeLists.txt  cf.c  memory.c  polyfill.c  scheduler.c  scheduler.slim  shader_pipeline.c  shader_pipeline.h
src/shady/: CMakeLists.txt  annotation.c  arena.c  block_builder.c  body_builder.c  body_builder.h  builtins.c  check.c  check.h  cli.c  compile.c  compile.h  config.c  constructors.c  dict.c  fold.c  fold.h  generator_constructors.c  generator_constructors.py  generator_node.c  generator_node.py  generator_primops.c  generator_primops.py  generator_print.c  generator_print.py  generator_rewrite.c  generator_rewrite.py  generator_type.c  generator_type.py  generator_visit.c  generator_visit.py  ir.c  ir_private.h  module.c  node.c  node_helpers.c  primops.c  print.c  print.h  rewrite.c  (+8 more)
src/simulator/: CMakeLists.txt  simulator.c  simulator.h
src/slim/: CMakeLists.txt  main.c  parser.c  parser.h  token.c  token.h
src/spirv/: s2s.c
src/transform/: import.c  ir_gen_helpers.c  ir_gen_helpers.h  memory_layout.c  memory_layout.h
test/: CMakeLists.txt  add_reconvergence_loop_multi_exit.slim  add_reconvergence_merge_evil.slim  add_reconvergence_multiple_loops.slim  arrays.slim  basic_blocks1.slim  basic_blocks2.slim  comments.slim  constant_in_use.slim  control_flow1.slim  control_flow2.slim  create_control_2.slim  empty.slim  entrypoint_args1.slim  fib_loop.slim  float.slim  functions1.slim  generic_ptrs1.slim  generic_ptrs2.slim  identity.slim  math.slim  memory1.slim  memory2.slim  rec_pow.slim  rec_pow2.slim  restructure1.slim  restructure2.slim  simplify_control.slim  subgroup_storage.slim  subgroup_var.slim  test_builder.c  test_math.c  test_with_val.cmake  unit_test.cmake
test/c/: include.c  simple1.c  simple2.c  simple3.c  simple4.c
test/driver/: test_broadcast_first.slim  test_elect_first.slim  test_scalarisation_loop.slim
test/opt/: CMakeLists.txt  mem2reg1.slim  mem2reg2.slim  mem2reg3.slim  mem2reg_should_fail.slim  opt_oracle.c
test/reconvergence_heuristics/: CMakeLists.txt  acyclic1.slim  acyclic2.slim  acyclic_evil.slim  acyclic_simple_with_arg.slim  loops1.slim  loops2.slim  multi_exit_loop.slim  nested_loops.slim
test/runner/: CMakeLists.txt  buffer_copy.json  buffer_copy.slim  hello_world_printf.json  hello_world_printf.slim  runner_app_common.h  runner_oracle.c  runner_test.c
test/shader-pipeline/: CMakeLists.txt  entrypoint_args1.slim  subgroup_storage.slim  subgroup_var.slim
test/slim/: CMakeLists.txt  arrays.slim  constant_in_use.slim  control_flow1.slim  float.slim  fn_decl.slim  functions1.slim  functions2.slim  memory2.slim  multiple_returns.slim  simplify_control.slim  stack.slim  struct.slim
test/spirv/: cl_simple1.spv  cl_simple1.spvasm
test/spv/: struct_explicit_and_not.slim
test/vcc/: CMakeLists.txt  address_spaces.c  alias.c  branch.c  byval_struct.c  checkerboard.frag.c  empty.comp.c  empty_kernel.c  flat_decoration.frag.c  fn_addr.c  goto.c  lib.c  lib2.c  linkage.frag.c  linkage2.frag.c  loop.c  loop_closed.c  loop_for_simple.c  loop_two_backedges.c  native_vec_swizzle.c  pointer.c  simple.frag.c  string.c  ternary.c  textured.frag.c  vcc_and_val.cmake  (+1 more)
vcc/: CMakeLists.txt  vcc.c  vcc_lib.c
vcc-std/: CMakeLists.txt
zhady/: CMakeLists.txt  common.i  shady.i  vcc.i
(+501 files in other folders)
