list(APPEND BASIC_TESTS empty.slim)
list(APPEND BASIC_TESTS entrypoint_args1.slim)
list(APPEND BASIC_TESTS basic_blocks1.slim)
list(APPEND BASIC_TESTS control_flow1.slim)
list(APPEND BASIC_TESTS control_flow2.slim)
list(APPEND BASIC_TESTS functions1.slim)
list(APPEND BASIC_TESTS identity.slim)
list(APPEND BASIC_TESTS memory1.slim)
list(APPEND BASIC_TESTS memory2.slim)
list(APPEND BASIC_TESTS rec_pow.slim)
list(APPEND BASIC_TESTS rec_pow2.slim)
list(APPEND BASIC_TESTS restructure1.slim)
list(APPEND BASIC_TESTS restructure2.slim)
list(APPEND BASIC_TESTS simplify_control.slim)
list(APPEND BASIC_TESTS float.slim)
list(APPEND BASIC_TESTS constant_in_use.slim)
#list(APPEND BASIC_TESTS arrays.slim)
list(APPEND BASIC_TESTS fn_decl.slim)
list(APPEND BASIC_TESTS math.slim)
list(APPEND BASIC_TESTS comments.slim)
list(APPEND BASIC_TESTS generic_ptrs1.slim)
list(APPEND BASIC_TESTS generic_ptrs2.slim)
list(APPEND BASIC_TESTS subgroup_var.slim)

list(APPEND BASIC_TESTS reconvergence_heuristics/acyclic1.slim)
list(APPEND BASIC_TESTS reconvergence_heuristics/acyclic2.slim)
list(APPEND BASIC_TESTS reconvergence_heuristics/acyclic_evil.slim)
list(APPEND BASIC_TESTS reconvergence_heuristics/loops1.slim)
list(APPEND BASIC_TESTS reconvergence_heuristics/loops2.slim)
list(APPEND BASIC_TESTS reconvergence_heuristics/multi_exit_loop.slim)
list(APPEND BASIC_TESTS reconvergence_heuristics/nested_loops.slim)

foreach(T IN LISTS BASIC_TESTS)
    add_test(NAME "test/${T}" COMMAND slim ${PROJECT_SOURCE_DIR}/test/${T} -o test.spv)
endforeach()

list(APPEND SAMPLE_TESTS fib.slim)
list(APPEND SAMPLE_TESTS hello_world.slim)

foreach(T IN LISTS SAMPLE_TESTS)
    add_test(NAME "samples/${T}" COMMAND slim ${PROJECT_SOURCE_DIR}/samples/${T} -o test.spv)
endforeach()

if (TARGET vcc)
    add_subdirectory(vcc)
endif ()
