find_package(json-c CONFIG)

if (json-c_FOUND)
    add_library(shady_clang clang_ast.c cdecl.c clang_ast_entry.c)
    target_compile_definitions(shady PRIVATE C_PARSER_PRESENT)
    target_link_libraries(shady_clang PRIVATE json-c::json-c)
    target_link_libraries(shady_clang PRIVATE api common)
    set_property(TARGET shady_clang PROPERTY POSITION_INDEPENDENT_CODE ON)
    target_link_libraries(shady PRIVATE shady_clang)
endif()
